--- a/index.html
+++ b/index.html
@@ -10,15 +10,14 @@
     <meta property="og:title" content="MarkdownPro - Real-time Markdown Editor" />
     <meta property="og:description" content="A powerful, real-time Markdown editor with live preview. Supports GFM, syntax highlighting, LaTeX, and Mermaid diagrams." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@MarkdownPro" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=JetBrains+Mono:wght@400;500;600&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg">
   </head>
 
   <body>
