--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>MarkdownPro - Real-time Markdown Editor with Live Preview</title>
+    <title>Markdown Weaver - Real-time Markdown Editor with Live Preview</title>
     <meta name="description" content="A powerful, real-time Markdown editor with live preview. Supports GitHub-Flavored Markdown, syntax highlighting, LaTeX math, Mermaid diagrams, and more." />
-    <meta name="author" content="MarkdownPro" />
+    <meta name="author" content="Markdown Weaver" />
 
-    <meta property="og:title" content="MarkdownPro - Real-time Markdown Editor" />
+    <meta property="og:title" content="Markdown Weaver - Real-time Markdown Editor" />
     <meta property="og:description" content="A powerful, real-time Markdown editor with live preview. Supports GFM, syntax highlighting, LaTeX, and Mermaid diagrams." />
     <meta property="og:type" content="website" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@MarkdownPro" />
+    <meta name="twitter:site" content="@MarkdownWeaver" />
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
